--- a/singlepage/page.html
+++ b/singlepage/page.html
@@ -36,26 +36,34 @@
 						</div>
 
 						<div class="cl-box">
-							<p class="clb-til">Param Setting<a href="javascript:;" class="clb-ico clb-icob" @click="showparam()"></a></p>
+							<p class="clb-til">Param Setting<a href="javascript:;" class="clb-ico clb-icob" @click="toggleparam()"></a></p>
 							<div class="clb-item">
-								<p class="clb-item-til">时间范围<span class="clb-item-type" v-cloak>{{timeRange}}</span></p>
+								<p class="clb-item-til">
+									时间范围
+									<span class="clb-item-type" v-cloak>
+										<span v-show="setting_copy.timeRange=='2'">{{setting.fromDay}}&ensp;天内</span>	
+										<span v-show="setting_copy.timeRange=='1'">{{setting.fromTime}}&ensp;--&ensp;至今</span>	
+										<span v-show="setting_copy.timeRange=='0'">不限</span>		
+									</span>
+
+								</p>
 							</div>
 							<div class="clb-item">
 								<p class="clb-item-til">R值：距最近一次交易时间</p>
 								<div class="clb-ul" v-cloak>
-									<div class="clb-li" v-for="item in setting.r.list"><p class="clb-li-l">{{item.name}}</p><p class="clb-li-m"><span class="clb-li-sp">{{item.from}}-{{item.to}}</span>天</p><p class="clb-li-r">{{item.weight}}</p></div>
+									<div class="clb-li" v-for="(item,index) in setting.r.list"><p class="clb-li-l">{{item.name}}</p><p class="clb-li-m"><span class="clb-li-sp">{{item.from}}-{{index==setting.r.list.length-1?'&infin;':item.to}}</span>天</p><p class="clb-li-r">{{item.weight}}</p></div>
 								</div>
 							</div>
 							<div class="clb-item">
 								<p class="clb-item-til">F值：交易频率</p>
 								<div class="clb-ul" v-cloak>
-									<div class="clb-li" v-for="item in setting.f.list"><p class="clb-li-l">{{item.name}}</p><p class="clb-li-m"><span class="clb-li-sp">{{item.from}}-{{item.to}}</span>次</p><p class="clb-li-r">{{item.weight}}</p></div>
+									<div class="clb-li" v-for="(item,index) in setting.f.list"><p class="clb-li-l">{{item.name}}</p><p class="clb-li-m"><span class="clb-li-sp">{{item.from}}-{{index==0?'&infin;':item.to}}</span>次</p><p class="clb-li-r">{{item.weight}}</p></div>
 								</div>
 							</div>
 							<div class="clb-item">
 								<p class="clb-item-til">M值：交易总金额</p>
 								<div class="clb-ul" v-cloak>
-									<div class="clb-li" v-for="item in setting.m.list"><p class="clb-li-l">{{item.name}}</p><p class="clb-li-m"><span class="clb-li-sp">{{item.from}}-{{item.to}}</span>元</p><p class="clb-li-r">{{item.weight}}</p></div>
+									<div class="clb-li" v-for="(item,index) in setting.m.list"><p class="clb-li-l">{{item.name}}</p><p class="clb-li-m"><span class="clb-li-sp">{{item.from}}-{{index==0?'&infin;':item.to}}</span>元</p><p class="clb-li-r">{{item.weight}}</p></div>
 								</div>
 							</div>
 						</div>
@@ -96,6 +104,119 @@
 
 						</div>
 
+					</div>
+				</div>
+
+				<!-- 弹层 -->
+				<div class="pop noselect" :class="{'pop-active':setting_show}">
+					<div class="pop-cont pop-setting">
+						<div class="toptil"><p class="toptil-in">Param Setting Edit</p></div>
+						<div class="rangetype">
+							<p class="col cola">时间范围</p>
+							<p class="rt-box">
+								<a href="javascript:;" class="rt-ls" :class="{'rt-ls-active':setting_copy.timeRange=='2'}" @click="changerange('2')">天数</a>
+								<a href="javascript:;" class="rt-ls" :class="{'rt-ls-active':setting_copy.timeRange=='1'}" @click="changerange('1')">时间段</a>
+								<a href="javascript:;" class="rt-ls" :class="{'rt-ls-active':setting_copy.timeRange=='0'}" @click="changerange('0')">不限</a>
+							</p>
+						</div>
+						<div class="rangewarp">
+							<div class="rw-ls clearfix" v-show="setting_copy.timeRange=='2'">
+								<p class="col colb">天数</p>
+								<p class="rw-input"><input type="number" class="rw-ctrol" name="" v-model="setting_copy.fromDay">天内</p>
+							</div>
+							<div class="rw-ls clearfix" v-show="setting_copy.timeRange=='1'">
+								<p class="col colb">时间段</p>
+								<p class="rw-input">
+									<input type="date" class="rw-ctrol rw-ctrola" name="" :value="setting_copy.copy_time"  v-model="setting_copy.copy_time" @change="datachange(setting_copy.copy_time)">&ensp;--&ensp;至今
+									<!-- <input type="date" name="" class="rw-cdata" v-model="setting_copy.copytime" @change="datachange(setting_copy.fromTime)"> -->
+								</p>
+							</div>
+							<div class="rw-ls clearfix">
+								<p class="col colb">WEB</p>
+								<p class="rw-input"><input type="text" class="rw-ctrol" name="" :value="setting_copy.web" v-model="setting_copy.web"></p>
+							</div>
+						</div>
+
+						<p class="ltil">参数设置<span class="ltil-in">（点击线段，可添加新节点，最多可添加个分段。）</span></p>
+
+						<div class="sbarbox ">
+							<div class="sbar-item">
+								<p class="sbar-til">R值：距最近一次交易时间</p>
+								<div class="sbar-cont">
+									<div class="sbar-bg">
+										<p class="sbar-bg-te sbar-bg-tel"><span class="sbar-bg-tein">0</span></p>
+										<p class="sbar-bg-te sbar-bg-ter"><span class="sbar-bg-tein">&infin;</span></p>
+										<p class="sbar-bg-po sbar-bg-pol"><span class="sbar-bg-tein" v-cloak>{{parseInt(minmax.r_min)}}</span></p>
+										<p class="sbar-bg-po sbar-bg-por"><span class="sbar-bg-tein" v-cloak>{{parseInt(minmax.r_max)}}</span></p>
+									</div>
+									<div class="sbar-lses">
+										<div class="sbar-ls" v-for="(item,index) in setting_list.r.list" :style="'width: '+((item.to-item.from)/item.span)*100+'%;'">
+											<p class="sbar-ls-move" v-dragmove="{'obj':setting_list.r,'index':index}"><span class="sbar-ls-to">{{item.to}}</span></p>
+											<p class="sbar-ls-hr"></p>
+											<a href="javascript:;" class="sbar-ls-add" @click="baradd(item,'r',index)"></a>
+											<div class="sbar-tip">
+												<a href="javascript:;" @click="bardel(item,'r',index)" class="sbar-ls-del"></a>
+												<input type="text" class="sbar-ls-ctrol" name="" placeholder="请输入名称" :value="item.name" v-model="item.name">
+												<input type="number" class="sbar-ls-ctrol sbar-ls-ctrola" name="" placeholder="请输入权重" :value="item.weight" v-model="item.weight">
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="sbar-item">
+								<p class="sbar-til">F值：交易频率</p>
+								<div class="sbar-cont">
+									<div class="sbar-bg">
+										<p class="sbar-bg-te sbar-bg-tel"><span class="sbar-bg-tein">0</span></p>
+										<p class="sbar-bg-te sbar-bg-ter"><span class="sbar-bg-tein">&infin;</span></p>
+										<p class="sbar-bg-po sbar-bg-pol"><span class="sbar-bg-tein" v-cloak>{{parseInt(minmax.f_min)}}</span></p>
+										<p class="sbar-bg-po sbar-bg-por"><span class="sbar-bg-tein" v-cloak>{{parseInt(minmax.f_max)}}</span></p>
+									</div>
+									<div class="sbar-lses">
+										<div class="sbar-ls" v-for="(item,index) in setting_list.f.list" :style="'width: '+((item.to-item.from)/item.span)*100+'%;'">
+											<p class="sbar-ls-move" v-dragmove="{'obj':setting_list.f,'index':index}"><span class="sbar-ls-to">{{item.to}}</span></p>
+											<p class="sbar-ls-hr"></p>
+											<a href="javascript:;" class="sbar-ls-add" @click="baradd(item,'f',index)"></a>
+											<div class="sbar-tip">
+												<a href="javascript:;" @click="bardel(item,'f',index)" class="sbar-ls-del"></a>
+												<input type="text" class="sbar-ls-ctrol" name="" placeholder="请输入名称" :value="item.name" v-model="item.name">
+												<input type="number" class="sbar-ls-ctrol sbar-ls-ctrola" name="" placeholder="请输入权重" :value="item.weight" v-model="item.weight">
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="sbar-item">
+								<p class="sbar-til">M值：交易总金额</p>
+								<div class="sbar-cont">
+									<div class="sbar-bg">
+										<p class="sbar-bg-te sbar-bg-tel"><span class="sbar-bg-tein">0</span></p>
+										<p class="sbar-bg-te sbar-bg-ter"><span class="sbar-bg-tein">&infin;</span></p>
+										<p class="sbar-bg-po sbar-bg-pol"><span class="sbar-bg-tein" v-cloak>{{parseInt(minmax.m_min)}}</span></p>
+										<p class="sbar-bg-po sbar-bg-por"><span class="sbar-bg-tein" v-cloak>{{parseInt(minmax.m_max)}}</span></p>
+									</div>
+									<div class="sbar-lses">
+										<div class="sbar-ls" v-for="(item,index) in setting_list.m.list" :style="'width: '+((item.to-item.from)/item.span)*100+'%;'">
+											<p class="sbar-ls-move" v-dragmove="{'obj':setting_list.m,'index':index}"><span class="sbar-ls-to">{{item.to}}</span></p>
+											<p class="sbar-ls-hr"></p>
+											<a href="javascript:;" class="sbar-ls-add" @click="baradd(item,'m',index)"></a>
+											<div class="sbar-tip">
+												<a href="javascript:;" @click="bardel(item,'m',index)" class="sbar-ls-del"></a>
+												<input type="text" class="sbar-ls-ctrol" name="" placeholder="请输入名称" :value="item.name" v-model="item.name">
+												<input type="number" class="sbar-ls-ctrol sbar-ls-ctrola" name="" placeholder="请输入权重" :value="item.weight" v-model="item.weight">
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="btnbox">
+							<a href="javascript:;" class="btn" @click="savedata()">Save</a>
+							<a href="javascript:;" class="btn" @click="toggleparam()">Cancel</a>
+						</div>
 					</div>
 				</div>
 			</div>
