--- a/theme/index.html
+++ b/theme/index.html
@@ -27,12 +27,12 @@
         
         <a href="select_picker.html" class="li">数据选择和数据拾取器</a>
 
-        <a href="xxx.html" class="li">tabs(----)</a>
+        <a href="tabs.html" class="li">tabs</a>
 
 
-        <a href="xxx.html" class="li">topsearch-line(----)</a>
+        <a href="topline.html" class="li">topsearch-line</a>
 
-        <a href="xxx.html" class="li">botmore(----)</a>
+        <a href="botmore.html" class="li">botmore</a>
 
         <a href="xxx.html" class="li">pullrefalsh(----)</a>
 
