--- a/theme/select_picker.html
+++ b/theme/select_picker.html
@@ -31,15 +31,15 @@
             <p class="el-ado">结束日期-列表日期</p>
             <div class="el-input"><input type="text" class="el-ctrol" placeholder="请选择" /></div>
         </div>
-        <div class="J_choosetable editline editline-select editline-cover" data-timegroup="y-m-d" data-format="y/m/d">
+        <div class="J_choosetable editline editline-select editline-cover" data-title="开始日期-表格日期" data-timegroup="y-m-d" data-format="y/m/d">
             <p class="el-ado">开始日期-表格日期</p>
             <div class="el-input"><input type="text" class="el-ctrol" placeholder="请选择" /></div>
         </div>
-        <div class="J_choosetable editline editline-select editline-cover" data-timegroup="y-m-d" data-format="y/m/d">
+        <div class="J_choosetable editline editline-select editline-cover" data-title="结束日期-表格日期" data-timegroup="y-m-d" data-format="y/m/d">
             <p class="el-ado">结束日期-表格日期</p>
             <div class="el-input"><input type="text" class="el-ctrol" placeholder="请选择" /></div>
         </div>
-        <div class="editline editline-select editline-cover">
+        <div class="editline editline-select editline-cover" id="J_address">
             <p class="el-ado">地址选择</p>
             <div class="el-input"><input type="text" class="el-ctrol" placeholder="请选择" /></div>
         </div>
@@ -48,16 +48,10 @@
     <br />
     <a href="javascript:;" class="li" id="J_btn">展示数据</a>
 
-    <select>
-            <option>0</option><option>0</option><option>0</option><option>0</option><option>0</option><option>0</option>
-    </select>
-
     <br />
     <div class="" id="J_selecta"></div>
     <br />
     <div class="" id="J_selectb"></div>
-    <br />
-    <br />
 
     <script>
         $(function(){
@@ -110,7 +104,7 @@
 
 
             var dt = new dateTable({
-                "targets":document.getElementsByClassName('J_choosetime'),
+                "targets":document.getElementsByClassName('J_choosetable'),
                 "confirm":function(rs,cb){
                     console.log(rs)
                     $(rs.target).find('input').val(rs.time_str)
@@ -118,6 +112,9 @@
                 },
                 "monthchange":function(rs){
                     console.log(5,rs)
+                },
+                "selected":function(rs){
+                    console.log(55,rs)
                 }
             })
 
@@ -125,10 +122,131 @@
             var dt = new dateTable({
                 "boxer":document.getElementById('J_selectb'),
                 "paddingBottom":40,
-                "confirm":function(rs,cb){
-                    console.log(5,rs)
-                    // $(rs.target).find('input').val(rs.time_str)
-                    // cb();
+                "monthchange":function(rs){
+                    console.log(6,rs)
+                },
+                "selected":function(rs){
+                    console.log(66,rs)
+                }
+            })
+
+            var provincelist = [
+                {id:1,name:'北京'},
+                {id:2,name:'上海市'},
+                {id:3,name:'广东省'},
+                {id:4,name:'河北省'},
+                {id:5,name:'黑龙江省'},
+                {id:6,name:'湖南省'},
+                {id:7,name:'安徽省'},
+                {id:8,name:'浙江省'},
+                {id:9,name:'西藏自治区'},
+                {id:10,name:'青海'},
+                {id:11,name:'江西省'},
+                {id:12,name:'山东省'}
+            ];
+
+            var citylist = [
+                {id:1,name:'邢台市'},
+                {id:2,name:'石家庄'},
+                {id:3,name:'邯郸市'},
+                {id:4,name:'张家口'},
+                {id:5,name:'保定市'},
+                {id:6,name:'唐山市'},
+                {id:7,name:'承德市'},
+                {id:8,name:'沧州市'},
+                {id:9,name:'廊坊市'}
+            ];
+
+            var arealist = [
+                {id:1,name:'南共市'},
+                {id:2,name:'桥东区'},
+                {id:3,name:'桥西区'},
+                {id:4,name:'清河县'},
+                {id:5,name:'任丘显'},
+                {id:6,name:'南和县'},
+                {id:7,name:'新和县'},
+                {id:8,name:'广宗县'},
+                {id:9,name:'巨鹿县'}
+            ];
+
+            var adr = new addressPicker({
+                target:document.getElementById('J_address'),
+                title:"地址选择",
+                fieldvalue:'id',
+                fieldshow:'name',
+                province:{
+                    datalist:provincelist,
+                    default_v:3,
+                    change:function(rs){
+                        console.log('p',rs)
+                        adr.province.distouch(true);
+                        adr.city.empty();
+                        adr.area.empty();
+                        $.ajax({
+                            url:'/api/callback.json?t='+(new Date().getTime()),
+                            success:function(rs){
+                                if(rs.code==0){
+                                    adr.province.distouch(false);
+
+                                    arealist = [
+                                        {id:1,name:'01邢台市'},
+                                        {id:2,name:'01石家庄'},
+                                        {id:3,name:'01邯郸市'},
+                                        {id:4,name:'01张家口'},
+                                        {id:5,name:'01保定市'},
+                                        {id:6,name:'01唐山市'},
+                                        {id:7,name:'01承德市'},
+                                        {id:8,name:'01沧州市'},
+                                        {id:9,name:'01廊坊市'}
+                                    ];
+                                    adr.city.reset({datalist:arealist,default_v:null})
+                                }
+                            }
+                        })
+                    }
+                },
+                city:{
+                    datalist:citylist,
+                    default_v:0,
+                    change:function(rs){
+                        console.log('c',rs)
+                        adr.city.distouch(true);
+                        adr.area.empty();
+                        $.ajax({
+                            url:'/api/callback.json?t='+(new Date().getTime()),
+                            success:function(rs){
+                                if(rs.code==0){
+                                    adr.city.distouch(false);
+
+                                    var list = [
+                                        {id:1,name:'01南共市'},
+                                        {id:2,name:'01桥东区'},
+                                        {id:3,name:'01桥西区'},
+                                        {id:4,name:'01清河县'},
+                                        {id:5,name:'01任丘显'},
+                                        {id:6,name:'01南和县'},
+                                        {id:7,name:'01新和县'},
+                                        {id:8,name:'01广宗县'},
+                                        {id:9,name:'01巨鹿县'}
+                                    ];
+                                    adr.area.reset({datalist:list,default_v:null})
+                                }
+                            }
+                        })
+                    }
+                },
+                area:{
+                    datalist:arealist,
+                    default_v:0
+                },
+                confirm:function(rs,cb){
+                    if(rs.province.id&&rs.city.id&&rs.area.id){
+                        $('#J_address').find('input').val(rs.province.name+'/'+rs.city.name+'/'+rs.area.name);
+                        cb();
+                    }else{
+                        CUES.tip({msg:'请选择完整'})
+                    }
+                    console.log(rs)
                 }
             })
 
