--- a/theme/index.html
+++ b/theme/index.html
@@ -36,6 +36,8 @@
 
         <a href="xxx.html" class="li">pullrefalsh(----)</a>
 
+        <a href="xxx.html" class="li">fromvaledata(----)</a>
+
 
     </div>
 
