--- a/theme/editlines.html
+++ b/theme/editlines.html
@@ -86,6 +86,17 @@
 
     <br />
     <a href="javascript:;" class="li" id="J_btn">展示数据</a>
+    <br>
+    <span data-key="switch" class="J_switch cm-switch cm-switch-active"></span>
+    <br>
+    <div class="cm-nmchange">
+        <p class="numbercg cm-nmchange-cont">
+            <a href="javascript:;" class="numbercg-minus cm-nmc-ao cm-nmc-aoa">-</a>
+            <span class="numbercg-numer">1</span>
+            <a href="javascript:;" class="numbercg-plus cm-nmc-ao">+</a>
+        </p>
+    </div>
+    <br>
 
     <div class="editlinebox">
         <div class="editline">
