--- a/theme/imgsee.html
+++ b/theme/imgsee.html
@@ -10,6 +10,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="stylesheet" href="assets/stylesheets/style.css" type="text/css" /> 
     <script language="javascript" type="text/javascript" src="./assets/javascript/size.js"></script>
+    <script language="javascript" type="text/javascript" src="./assets/javascript/jquery-2.1.4.min.js"></script>
     <script  language="javascript" type="text/javascript" src="./assets/javascript/tools.js"></script>
     <title>demo样板</title>
     <style>
@@ -22,33 +23,6 @@
         <a href="toast.html" class="li">toast提示框</a>
 
         <a href="editlines.html" class="li">editlines-展示行</a>
-
-        <a href="pop.html" class="li">pop-弹框展示</a>
-        
-        <a href="select_picker.html" class="li">数据选择和数据拾取器</a>
-
-        <a href="tabs.html" class="li">tabs</a>
-
-
-        <a href="topline.html" class="li">topsearch-line</a>
-
-        <a href="botmore.html" class="li">botmore</a>
-
-        <a href="elmbotmore.html" class="li">elmReachBottom</a>
-
-        <a href="scrollrefresh.html" class="li">pullrefalsh</a>
-
-        <!-- <a href="validata.html" class="li">fromvalidata(----)</a> -->
-
-        <a href="swipe.html" class="li">swipe</a>
-
-        <a href="imgsee.html" class="li">imgsee</a>
-
-        <a href="imgclip.html" class="li">imgclip图片裁切(单独脚本----)</a>
-
-        <a href="canvas.html" class="li">canvas(单独脚本----)</a>
-
-
     </div>
 </body>
 </html>
