--- a/theme/index.html
+++ b/theme/index.html
@@ -46,7 +46,7 @@
 
         <a href="imgclip.html" class="li">imgclip图片裁切(单独脚本----)</a>
 
-        <a href="canvas.html" class="li">canvas(单独脚本----)</a>
+        <a href="canvas.html" class="li">canvas</a>
 
 
     </div>
