--- a/theme/index.html
+++ b/theme/index.html
@@ -43,7 +43,7 @@
 
         <a href="imgsee.html" class="li">imgsee</a>
 
-        <a href="imgclip.html" class="li">imgclip图片裁切(单独脚本----)</a>
+        <a href="imgclip.html" class="li">imgclip图片裁切</a>
 
         <a href="canvas.html" class="li">canvas</a>
 
