--- a/theme/index.html
+++ b/theme/index.html
@@ -43,6 +43,8 @@
 
         <a href="imgsee.html" class="li">imgsee</a>
 
+        <a href="compress.html" class="li">图片压缩</a>
+
         <a href="imgclip.html" class="li">imgclip图片裁切</a>
 
         <a href="canvas.html" class="li">canvas</a>
