--- a/theme/imgclip.html
+++ b/theme/imgclip.html
@@ -12,21 +12,44 @@
     <script language="javascript" type="text/javascript" src="./assets/javascript/size.js"></script>
     <script language="javascript" type="text/javascript" src="./assets/javascript/jquery-2.1.4.min.js"></script>
     <script  language="javascript" type="text/javascript" src="./assets/javascript/tools.js"></script>
+    <!-- <script  language="javascript" type="text/javascript" src="./assets/javascript/vconsole.min.js"></script> -->
+    <script language="javascript" type="text/javascript" src="./assets/javascript/exif.js"></script>
+    <script language="javascript" type="text/javascript" src="./assets/javascript/megapix-image.js"></script>
+    <script  language="javascript" type="text/javascript" src="./assets/javascript/zshimage.js"></script>
     <title>demo样板</title>
     <style>
         .ul{ padding-top: 10px;}
         .li{ display: block; padding: 10px 0; line-height: 40px; text-align: center; font-size: 14px; background: #fff; border-top: 1px solid #eee; border-bottom: 1px solid #eee; margin-bottom: 10px;}
-        .head{ height: 50px; width: 50px; border-radius: 50%; margin-right: 10px;}
+        .head{ height: 80px; width: 80px; margin-right: 10px;}
+        /* .head{ position: fixed; left: 0; top: 0; z-index: 9999;} */
     </style>
 </head>
 <body>
-	<div class="ul">
-        <a href="javascript:;" id="J_click" class="li"><img src="" class="head">点击编辑头像</a>
+	<div class="ul" style="height:2000px">
+        <a href="javascript:;" id="J_click" class="li"><img src="" class="head" id="J_head">点击编辑头像</a>
     </div>
+
+    
 
     <script>
         $(function(){
-            
+            var imgclip;
+            $('#J_click').click(function(){
+                if(imgclip){
+                    imgclip.show();
+                }else{
+                    imgclip = new zshImgClip({
+                        width_show:200,
+                        height_show:200,
+                        width_clip:200,
+                        height_clip:200,
+                        show:true,
+                        confirm:function(rs){
+                            $('#J_head').attr('src',rs)
+                        }
+                    })
+                }
+            })
         })
     </script>
 </body>
