--- a/theme/imgsee.html
+++ b/theme/imgsee.html
@@ -12,7 +12,7 @@
     <script language="javascript" type="text/javascript" src="./assets/javascript/size.js"></script>
     <script language="javascript" type="text/javascript" src="./assets/javascript/jquery-2.1.4.min.js"></script>
     <script  language="javascript" type="text/javascript" src="./assets/javascript/tools.js"></script>
-    <script  language="javascript" type="text/javascript" src="./assets/javascript/vconsole.min.js"></script>
+    <!-- <script  language="javascript" type="text/javascript" src="./assets/javascript/vconsole.min.js"></script> -->
     <title>demo样板</title>
     <style>
         .img{ width: 100px; height: 100px; margin: 0 20px 20px 0; float: left;}
