--- a/theme/pop.html
+++ b/theme/pop.html
@@ -97,6 +97,9 @@
 			function closepop(tar){
 				tar.removeClass('cm-pop-active');
             };
+            function showpop(tar){
+				tar.addClass('cm-pop-active');
+            };
             
 
         })
