--- a/theme/editlines.html
+++ b/theme/editlines.html
@@ -161,7 +161,13 @@
                 alert(JSON.stringify(data))
             })
 
+            // $('#J_phone').on('input propertychange',function(){
+			// 	var val = $(this).val().trim();
 
+		    //     data.phone = !regphone.test(val)?'':val;
+		        
+		    //     data.phone?J_next01.removeClass('btn-dis'):J_next01.addClass('btn-dis');
+			// });
             // textarea和input一致
 			$('.J_el_ctrol').blur(function(){
 				var self = $(this),
