--- a/test/roomboard.html
+++ b/test/roomboard.html
@@ -978,6 +978,26 @@
 		    	{"id":5,"name":"途牛"},
     			{"id":6,"name":"携程"},
     			{"id":7,"name":"艺龙"},
+                {"id":8,"name":"去哪儿"},
+                {"id":5,"name":"途牛"},
+    			{"id":6,"name":"携程"},
+    			{"id":7,"name":"艺龙"},
+                {"id":8,"name":"去哪儿"},
+                {"id":5,"name":"途牛"},
+    			{"id":6,"name":"携程"},
+    			{"id":7,"name":"艺龙"},
+                {"id":8,"name":"去哪儿"},
+                {"id":5,"name":"途牛"},
+    			{"id":6,"name":"携程"},
+    			{"id":7,"name":"艺龙"},
+                {"id":8,"name":"去哪儿"},
+                {"id":5,"name":"途牛"},
+    			{"id":6,"name":"携程"},
+    			{"id":7,"name":"艺龙"},
+                {"id":8,"name":"去哪儿"},
+                {"id":5,"name":"途牛"},
+    			{"id":6,"name":"携程"},
+    			{"id":7,"name":"艺龙"},
     			{"id":8,"name":"去哪儿"},
     			{"id":97,"name":"同城"}
 		    ];
