--- a/theme/elmbotmore.html
+++ b/theme/elmbotmore.html
@@ -113,6 +113,7 @@
             // 注册下拉滚动效果
 			var bm = new elmReachBottom({
                 elm:document.getElementById('J_box'),
+                height:$(window).height()*.7,
                 stop:false,
                 num:400,
                 callback:function(){
