--- a/easyweb/article.html
+++ b/easyweb/article.html
@@ -21,7 +21,11 @@
         </div>
         <div class="pg-right">
             <div class="left">
-                <div class="lls">adsfa<i class="icon zsh sh--xiahuaxian"></i>文本</div>
+                <div class="lls"><i class="icon zsh sh--xiahuaxian"></i>文本模板</div>
+                <div class="lls"><i class="icon zsh sh--xiahuaxian"></i>图片模板</div>
+                <div class="lls"><i class="icon zsh sh--xiahuaxian"></i>图文模板</div>
+                <div class="lls"><i class="icon zsh sh--xiahuaxian"></i>形状模板</div>
+                <div class="lls"><i class="icon zsh sh--xiahuaxian"></i>音乐</div>
             </div>
         </div>
     </div>
