--- a/easyweb/article.html
+++ b/easyweb/article.html
@@ -16,16 +16,28 @@
 <body>
 	<div class="html">
         <div class="pg-top">
+            <p class="logo">EASY</p>
             <p class="left">长文本模版</p>
             <p class="right">测试版本</p>
         </div>
         <div class="pg-right">
             <div class="left">
-                <div class="lls"><i class="icon zsh sh--xiahuaxian"></i>文本模板</div>
-                <div class="lls"><i class="icon zsh sh--xiahuaxian"></i>图片模板</div>
-                <div class="lls"><i class="icon zsh sh--xiahuaxian"></i>图文模板</div>
-                <div class="lls"><i class="icon zsh sh--xiahuaxian"></i>形状模板</div>
-                <div class="lls"><i class="icon zsh sh--xiahuaxian"></i>音乐</div>
+                <div class="lls"><i class="icon zsh sh-xiahuaxian"></i>文本模板</div>
+                <div class="lls lls-active"><i class="icon zsh sh-tupian"></i>图片模板</div>
+                <div class="lls"><i class="icon zsh sh-tuwen_o"></i>图文模板</div>
+                <div class="lls"><i class="icon zsh sh-xingzhuang-jianxing"></i>形状模板</div>
+                <div class="lls"><i class="icon zsh sh-yinyue"></i>音乐</div>
+            </div>
+            <div class="cont">
+                <div class="exps">
+                    大标题
+                </div>
+                <div class="exps">
+                    标题
+                </div>
+                <div class="exps">
+                    副标题
+                </div>
             </div>
         </div>
     </div>
